tests/expectations/compiler/bugs/unknown_variable_fail.out
Error [ETYC0372005]: Unknown variable `caller`
    --> compiler-test:34:52
     |
  34 |         return (self.caller, final { finalize_init(caller); });
     |                                                    ^^^^^^
Error [ETYC0372005]: Unknown variable `account`
    --> compiler-test:52:49
     |
  52 |     let owner_amount: u64 = Mapping::get_or_use(account, caller, 0u64);
     |                                                 ^^^^^^^
Error [ETYC0372005]: Unknown variable `account`
    --> compiler-test:54:18
     |
  54 |     Mapping::set(account, caller, owner_amount + admin_token_amt);
     |                  ^^^^^^^
